--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.credil.helloworldservice"
+      package="cn.com.zpad.view.fragment"
       android:versionCode="1"
       android:versionName="1.0">
 
@@ -9,17 +9,17 @@
     <!-- Define a permission for people to access the native service this should normally
     happen in a different place. all Binder interface are to be considered public so you always
     need to take security into account -->
-    <permission android:name="org.credil.helloworldservice.permissions.CALL_HELLOTHERE"
+    <permission android:name="cn.com.zpad.backupservice.permissions.CALL_COPYFILE"
         android:permissionGroup="android.permission-group.HARDWARE_CONTROLS"
         android:protectionLevel="dangerous"
         android:label="@string/permlab_callHelloTherePermission"
         android:description="@string/permdesc_callHelloTherePermission" />
 
     <!-- use this permission in the packages -->
-    <uses-permission android:name="org.credil.helloworldservice.permissions.CALL_HELLOTHERE" />
+    <uses-permission android:name="cn.com.zpad.backupservice.permissions.CALL_COPYFILE" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".HelloWorldActivity"
+        <activity android:name=".BackUpSystemFragment"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
